--- a/settings.json
+++ b/settings.json
@@ -4,15 +4,15 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"NamaBot":"Kurz Bot Assistan", 
-"ownerNumber": "6281220670449@s.whatsapp.net",
-"NomorOwner":"6281220670449", 
-"NomorOwner2":"+62 812-2067-0449", 
-"NamaOwner":"MAMANG KURRXDゑ", 
+"NamaBot":"Ngen Botz", 
+"ownerNumber": "6288802869987@s.whatsapp.net",
+"NomorOwner":"6288802869987", 
+"NomorOwner2":"+62 888-0286-9987", 
+"NamaOwner":"HERTODゑ", 
 "Dana":"081220670449", 
 "Pulsa":"081220670449", 
 "Gopay":"082298891772", 
-"kurrxdkey":"isi apikey lu",
+"kurrxdkey":"feyw72Ic",
 "lolkey":"isi apikey",
 "gcount": 20
 }
