--- a/settings.json
+++ b/settings.json
@@ -4,13 +4,13 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"NamaBot":"Ngen Botz", 
-"ownerNumber": "6288802869987@s.whatsapp.net",
-"NomorOwner":"6288802869987", 
-"NomorOwner2":"+62 888-0286-9987", 
-"NamaOwner":"HERTODゑ", 
-"Dana":"081220670449", 
-"Pulsa":"081220670449", 
+"NamaBot":"MauL Botz", 
+"ownerNumber": "62895416489526@s.whatsapp.net",
+"NomorOwner":"62895416489526", 
+"NomorOwner2":"+62 8954-1648-9526", 
+"NamaOwner":"AZENゑ", 
+"Dana":"0895416489526", 
+"Pulsa":"085643472795", 
 "Gopay":"082298891772", 
 "kurrxdkey":"feyw72Ic",
 "lolkey":"isi apikey",
