--- a/settings.json
+++ b/settings.json
@@ -4,14 +4,14 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"NamaBot":"Ngen Botz", 
-"ownerNumber": "6288802869987@s.whatsapp.net",
-"NomorOwner":"6288802869987", 
-"NomorOwner2":"+62 888-0286-9987", 
-"NamaOwner":"HERTODゑ", 
-"Dana":"081220670449", 
-"Pulsa":"081220670449", 
-"Gopay":"082298891772", 
+"NamaBot":"6283830815715", 
+"ownerNumber": "6283830815715@s.whatsapp.net",
+"NomorOwner":"6283830815715", 
+"NomorOwner2":"+62 821-2424-5042", 
+"NamaOwner":"𝑀𝑒𝑙𝑙 💫", 
+"Dana":"082124245042", 
+"Pulsa":"083830815715", 
+"Gopay":"gakda", 
 "kurrxdkey":"feyw72Ic",
 "lolkey":"isi apikey",
 "gcount": 20
